# sisap24-hiob

./: .gitignore  .gitmodules  Dockerfile  docker-instructions.txt
.github/actions/evaluation/: action.yml
.github/actions/system_setup/: action.yml
.github/workflows/: Task1.yml  Task2.yml  Task3.yml  Test.yml
eval/: eval.py
rust-search/: Cargo.toml
rust-search/src/: cli.rs  fs_fun.rs  h5py_fun.rs  hdf5_fun.rs  main.rs
